# iis-exercises

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt  utils.py
01_introduction/: 01_Turtlesim.ipynb
02_URDF/: 2_URDF.ipynb  URDF.ipynb  armar6.urdf  iai_kitchen.urdf.xacro  justin.urdf  myrobot.urdf  spot.urdf.xacro
02_URDF/examples/: IAI_kitchen.urdf  t12.urdf
02_URDF/examples/iai_kitchen/: CMakeLists.txt
02_URDF/examples/t12_description/: CMakeLists.txt  package.xml
02_URDF/examples/t12_description/meshes/: Ankle1.STL  Ankle2.STL  Ankle3.STL  Ankle4.STL  Ankle5.STL  Ankle6.STL  Body.STL  Foot1.STL  Foot2.STL  Foot3.STL  Foot4.STL  Foot5.STL  Foot6.STL  Hip1.STL  Hip2.STL  Hip3.STL  Hip4.STL  Hip5.STL  Hip6.STL  Knee1.STL  Knee2.STL  Knee3.STL  Knee4.STL  Knee5.STL  Knee6.STL  Shin1.STL  Shin2.STL  Shin3.STL  Shin4.STL  Shin5.STL  Shin6.STL  Thigh1.STL  Thigh2.STL  Thigh3.STL  Thigh4.STL  Thigh5.STL  Thigh6.STL
02_URDF/iai_kitchen/: CMakeLists.txt  package.xml
03_senors/: 3_Turtlebot3.ipynb  sensors.ipynb
03_sensors/: scan.rviz  sensors.ipynb
03_sensors/laserscan/: metadata.yaml
notebooks/: 2_URDF.ipynb  myrobot.urdf  utils.py
