<?xml version="1.0"?>
<package format="2">
  <name>iai_kitchen</name>
  <version>0.0.0</version>
  <description>The iai_kitchen package</description>

  <maintainer email="bbrieber@todo.todo">bbrieber</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
