<?xml version="1.0"?>
<package format="2">
  <name>t12_description</name>
  <version>0.0.0</version>
  <description>The t12_description package</description>
  <maintainer email="isabel.paredes@quantstack.net">Isabel Paredes</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
